changes made for deployment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kaushiksriram16.github.io/React-Todo-App",
+  "homepage": "https://kaushiksriram16.github.io/Todo-App-React",
   "name": "react-proj",
   "version": "0.1.0",
   "private": true,
