--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kaushiksriram16.github.io/Todo-App-React/",
+  "homepage": "https://kaushiksriram16.github.io/Todo-React-App/",
   "name": "react-proj",
   "version": "0.1.0",
   "private": true,
